# file-extension-truth-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/extension_truth/: __init__.py  checker.py  cli.py
tests/: test_checker.py
